# pasta

./: README.md  components.json  next.config.js  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Empty.tsx  Icons.tsx  Search.tsx  TextCard.tsx
src/components/ui/: button.tsx  card.tsx  command.tsx  dialog.tsx  input.tsx
src/pages/: _app.tsx  index.tsx
src/store/: clips.store.ts
src/styles/: globals.css
www/: components.json  next.config.mjs  package-lock.json  package.json
www/src/app/: layout.tsx  page.tsx
www/src/components/: Footer.tsx  Navbar.tsx
